feat: functions API transaction
