# src/product-service/internal/models/transaction.go
@@ -6,12 +6,12 @@ package models
 import "time"
 
 type InventoryTransaction struct{
-	Transaction_ID 		int 		`json:"transaction_id" gorm:"column:transaction_id"`
+	Transaction_ID 		string 		`json:"transaction_id" gorm:"column:transaction_id"`
 	Product_ID 			string 		`json:"product_id" gorm:"column:product_id"`
-	Quantity 			int 		`json:"quatity" gorm:"column:quatity"`
-	Transaction_Type 	*Type 		`json:"transaction_type" gorm:"column:transaction_type"`
-	Transaction_Date 	*time.Time 	`json:"transaction_date" gorm:"column:transaction_date"`
-	Supplier_ID 		int 		`json:"supplier_id" gorm:"column:supplier_id"`
+	Warehouse_ID		int			`json:"warehouse_id" gorm:"column:warehouse_id"`
+	Quantity 			int 		`json:"quantity" gorm:"column:quantity"`
+	Transaction_Type 	*Type 		`json:"transaction_type,omitempty" gorm:"column:transaction_type"`
+	Transaction_Date 	*time.Time 	`json:"transaction_date,omitempty" gorm:"column:transaction_date"`
 }
 
 func(InventoryTransaction) TableName() string{
