# src/product-service/internal/models/warehouse.go
@@ -5,11 +5,11 @@
 package models
 
 type Warehouses struct {
-	Warehouse_ID 	int 	`gorm:"column:warehouse_id" json:"Warehouse_ID"`
-	Warehouses_Name string 	`gorm:"column:warehouse_name" json:"Warehouse_Name"`
-	Location 		string 	`gorm:"column:location" json:"Location"`
+	Warehouse_ID    int    `gorm:"column:warehouse_id" json:"warehouse_id,omitempty"`
+	Warehouses_Name string `gorm:"column:warehouse_name" json:"warehouse_name"`
+	Location        string `gorm:"column:location" json:"location"`
 }
 
-func(Warehouses) TableName() string{
+func (Warehouses) TableName() string {
 	return "warehouses"
 }
